Closed Bug 71354 Opened 25 years ago Closed 25 years ago

check in table related fixes from IBM bidi project

Categories

(Core :: Layout: Tables, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla0.8.1

People

(Reporter: erik, Assigned: erik)

Details

Attachments

(1 file)

This bug report will be used to attach diffs for HTML tables from the IBM bidi project.
Chris, please (have someone) review these changes. Thanks!
r=karnaze
sr=attinasi
Changes checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Priority: -- → P1
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.8.1
QA contact update
QA Contact: chrisd → amar
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: