bug 71354; author=simon@softel.co.il; r=karnaze; sr=attinasi; changes for table related files from IBM bidi project